@@ -1,4 +1,0 @@
-# desc "Explaining what the task does"
-# task :jrails_auto_complete do
-#   # Task goes here
-# end
