@@ -1,9 +1,9 @@
-require File.join(File.dirname(__FILE__), *%w[.. lib jrails_auto_complete])
-require File.join(File.dirname(__FILE__), *%w[.. lib jrails_auto_complete_macros_helper])
-require File.join(File.dirname(__FILE__), *%w[.. lib jrails_auto_complete_form_builder_helper])
-require File.join(File.dirname(__FILE__), *%w[.. lib jrails_auto_complete_tag_helper])
+require File.join(File.dirname(__FILE__), *%w[.. lib jquery_autocomplete])
+require File.join(File.dirname(__FILE__), *%w[.. lib jquery_autocomplete_macros_helper])
+require File.join(File.dirname(__FILE__), *%w[.. lib jquery_autocomplete_form_builder_helper])
+require File.join(File.dirname(__FILE__), *%w[.. lib jquery_autocomplete_tag_helper])
 
-ActionController::Base.send :include, JrailsAutoComplete
-ActionController::Base.helper JrailsAutoCompleteMacrosHelper
-ActionView::Helpers::FormBuilder.send :include, JrailsAutoCompleteFormBuilderHelper
-ActionView::Helpers::TagHelper.send :include, JrailsAutoCompleteTagHelper
+ActionController::Base.send :include, JqueryAutocomplete
+ActionController::Base.helper JqueryAutocompleteMacrosHelper
+ActionView::Helpers::FormBuilder.send :include, JqueryAutocompleteFormBuilderHelper
+ActionView::Helpers::TagHelper.send :include, JqueryAutocompleteTagHelper
