@@ -1,6 +1,6 @@
 require 'test/unit'
 
-class JrailsAutoCompleteTest < Test::Unit::TestCase
+class JqueryAutocompleteTest < Test::Unit::TestCase
   # Replace this with your real tests.
   def test_this_plugin
     flunk
