@@ -6,6 +6,7 @@
     Enhancements
 
     Changes
+       * renamed plugin jquery_autocomplete
 
     Bugfixes
 
